--- a/MDK-ARM/demo.build_log.htm
+++ b/MDK-ARM/demo.build_log.htm
@@ -21,45 +21,22 @@ Target DLL:      Segger\JL2CM3.dll V2.99.26.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-C:\Users\LeoZhuang\AllFiles\2Projects\Robomaster2019\ShanghaiTech_RoboMaster2019_MotorTest\MDK-ARM\demo.uvprojx
-Project File Date:  09/11/2018
+C:\Users\LeoZhuang\AllFiles\2Projects\Robomaster2019\ShanghaiTech_RoboMaster2019_Test\MDK-ARM\demo.uvprojx
+Project File Date:  09/25/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'demo'
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_can.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_uart.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling system_stm32f4xx.c...
-compiling bsp_can.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling pid.c...
-compiling stm32f4xx_hal_msp.c...
 compiling main.c...
-compiling usart.c...
-compiling stm32f4xx_hal_timebase_TIM.c...
-compiling gpio.c...
-compiling stm32f4xx_it.c...
-compiling dma.c...
-compiling can.c...
-compiling Remote_Control.c...
-compiling tim.c...
+../Src/UserTest.h(37): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	if (output > 0.1) output = 0.1;
+../Src/UserTest.h(38): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	if (output < 0.05) output = 0.05;
+../Src/main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=13400 RO-data=492 RW-data=44 ZI-data=3036  
+Program Size: Code=13738 RO-data=494 RW-data=44 ZI-data=3068  
 After Build - User command #1: fromelf.exe  --bin -o ./bin/test.bin ./demo.axf
-".\demo.axf" - 0 Error(s), 0 Warning(s).
+".\demo.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -82,7 +59,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.1
-Build Time Elapsed:  00:01:20
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
