--- a/MDK-ARM/demo.build_log.htm
+++ b/MDK-ARM/demo.build_log.htm
@@ -27,16 +27,11 @@ Project File Date:  10/25/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'demo'
-compiling main.c...
-../Src/UserTest.h(40): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	if (output > 0.1) output = 0.1;
-../Src/UserTest.h(41): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	if (output < 0.05) output = 0.05;
-../Src/main.c: 2 warnings, 0 errors
+compiling usart.c...
 linking...
-Program Size: Code=13796 RO-data=492 RW-data=60 ZI-data=3084  
+Program Size: Code=13996 RO-data=492 RW-data=60 ZI-data=5388  
 After Build - User command #1: fromelf.exe  --bin -o ./bin/test.bin ./demo.axf
-".\demo.axf" - 0 Error(s), 2 Warning(s).
+".\demo.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
